--- a/index.html
+++ b/index.html
@@ -8,6 +8,119 @@
   <title>Landing Page</title>
 </head>
 <body>
+  <nav>
+    <div class="logo">
+      <img src="https://randomuser.me/api/portraits/men/70.jpg" alt="user">
+    </div>
+    <ul>
+      <li><a href="#">Home</a></li>
+      <li><a href="#">Portfolio</a></li>
+      <li><a href="#">Blog</a></li>
+      <li><a href="#">Contact Me</a></li>
+    </ul>
+  </nav>
+
+  <header>
+    <button id="toggle" class="toggle">
+      <i class="fa fa-bars fa-2x"></i>
+    </button>
+
+    <h1>Landing Page</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis, quos?</p>
+
+    <button class="cta-btn" id="open">Sign Up</button>
+  </header>
+
+  <div class="container">
+    <h2>What is this page about</h2>
+      <p>
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Modi aut ducimus ut deleniti impedit, 
+        itaque inventore tenetur distinctio, 
+        sed voluptates quas facilis nemo adipisci deserunt corrupti ab commodi voluptatem voluptatum?
+      </p>
+      <p>
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Maxime est aspernatur mollitia dicta 
+        iure consequatur nemo temporibus molestiae eligendi tenetur.
+      </p>
+
+    <h2>Tell me more</h2>
+
+    <p>
+      Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dignissimos quam itaque odio atque modi aliquid, 
+      adipisci quibusdam optio deleniti cum tempore eos non voluptas earum. Veritatis dolorum, 
+      atque nostrum culpa, magni tempora, 
+      voluptatibus debitis dolorem consequuntur eos qui assumenda sint.
+    </p>
+
+    <h2>Benefits</h2>
+    <ul>
+      <li>Lifetime Access</li>
+      <li>30 day Money back</li>
+      <li>Tailored Customer Support</li>
+    </ul>
+
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor possimus eligendi voluptatem doloremque velit 
+      dolore. Suscipit deleniti corporis iure cumque natus magni ipsum dolor. Doloribus officia cupiditate expedita 
+      veniam asperiores repellendus unde molestiae. 
+      Itaque explicabo sunt consequuntur fugiat eveniet numquam.
+    </p>
+
+  </div>
+
+  <!-- Modal -->
+  <div class="modal-container" id="modal">
+    <div class="modal">
+      <button class="closed-btn" id="closed">
+        <i class="fa fa-times"></i>
+      </button>
+      <div class="modal-header">
+        <h3>Sign Up</h3>
+      </div>
+      <div class="modal-content">
+        <p>Register with us to get offers, support and more</p>
+        <form class="modal-form">
+          <div>
+            <label for="name">Name</label>
+            <input 
+              type="text" 
+              id="name" 
+              placeholder="Enter Name" 
+            />
+          </div>
+          <div>
+            <label for="email">Email</label>
+            <input 
+              type="email" 
+              id="email" 
+              placeholder="Enter Email"
+            />
+          </div>
+          <div>
+            <label for="password">Password</label>
+            <input 
+              type="password" 
+              id="password" 
+              placeholder="Enter Password"
+            />
+          </div>
+          <div>
+            <label for="password2">Confirm Password</label>
+            <input 
+              type="password" 
+              id="password2" 
+              placeholder="Confirm Password"
+            />
+          </div>
+          <input 
+            type="submit" 
+            value="submit" 
+            class="submit-btn" 
+          />
+        </form>
+      </div>
+    </div>
+  </div>
 
   
 
