--- a/index.html
+++ b/index.html
@@ -85,7 +85,8 @@
             <input 
               type="text" 
               id="name" 
-              placeholder="Enter Name" 
+              placeholder="Enter Name"
+              class="form-input" 
             />
           </div>
           <div>
@@ -94,6 +95,7 @@
               type="email" 
               id="email" 
               placeholder="Enter Email"
+              class="form-input"
             />
           </div>
           <div>
@@ -102,6 +104,7 @@
               type="password" 
               id="password" 
               placeholder="Enter Password"
+              class="form-input"
             />
           </div>
           <div>
@@ -110,6 +113,7 @@
               type="password" 
               id="password2" 
               placeholder="Confirm Password"
+              class="form-input"
             />
           </div>
           <input 
