--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <h3>Sign Up</h3>
       </div>
       <div class="modal-content">
-        <p>Register with us to get offers, support and more</p>
+        <p>Register to get updates</p>
         <form class="modal-form">
           <div>
             <label for="name">Name</label>
